implementing good practices - with sonar help :D